--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 *.out
 *.txt
-.vscode/*
 build
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
